packages/website/src/layouts/detail.css
/**
 * Layout for detail pages. A detail page is usually a rendered markdown file.
 * It displays the `side-nav`, `breadcrumb-nav` and
 * a table of contents (`anchor-nav`)
 */
.ma-layout-detail {
  /* Temporary variables until the design is thought through with a designer */
  --ma-layout-detail-side-nav-min-inline-size: 100px;
  --ma-layout-detail-side-nav-max-inline-size: 300px;
  --ma-layout-detail-min-inline-size: 220px;
  --ma-layout-detail-content-max-inline-size: var(--basis-page-max-inline-size);
  --ma-layout-detail-content-padding-inline-end: var(--basis-space-inline-xl);
  --ma-layout-detail-content-padding-inline-start: var(--basis-space-inline-xl);
  --ma-layout-detail-content-padding-block-end: var(--basis-space-block-6xl);
  --ma-layout-detail-content-padding-block-start: var(--basis-space-block-xl);

  container: ma-layout-detail / inline-size;
  inline-size: 100%;
}

.ma-layout-detail__content {
  box-sizing: border-box;
  column-gap: var(--ma-layout-column-gap);
  display: grid;
  grid-template-areas:
    "side-nav"
    "breadcrumb-nav"
    "header"
    "anchor-nav"
    "body";
  inline-size: 100%;
  margin-inline: auto;
  max-inline-size: var(--ma-layout-detail-content-max-inline-size);
  padding-block-end: var(--ma-layout-detail-content-padding-block-end);
  padding-block-start: var(--ma-layout-detail-content-padding-block-start);
  padding-inline-end: var(--ma-layout-detail-content-padding-inline-end);
  padding-inline-start: var(--ma-layout-detail-content-padding-inline-start);
}

.ma-layout-detail__side-nav {
  display: none;
  grid-area: side-nav;
  inset-block-start: 0;
  inset-inline-start: 0;
  position: absolute;
}

.ma-layout-detail__breadcrumb-nav {
  grid-area: breadcrumb-nav;
}

.ma-layout-detail__header {
  grid-area: header;
  .ams-grid__cell {
    display: flex;
    flex-direction: column;
    gap: var(--basis-space-row-xl);
  }
}

.ma-layout-detail__anchor-nav {
  grid-area: anchor-nav;
}

.ma-layout-detail__main {
  display: contents;
}

.ma-layout-detail__main-body {
  grid-area: body;
}

@media (--medium-and-up) {
  .ma-layout-detail__content {
    grid-template-areas:
      "breadcrumb-nav"
      "header"
      "anchor-nav"
      "body ";
    grid-template-rows: auto auto auto 1fr;
  }
}

@media (--large-and-up) {
  .ma-layout-detail__side-nav {
    display: block;
    position: relative;
  }

  .ma-layout-detail__content {
    grid-template-areas:
      "side-nav breadcrumb-nav"
      "side-nav header"
      "side-nav anchor-nav"
      "side-nav body";
    grid-template-columns:
      /* side-nav */
      var(--ma-layout-side-bar-inline-size)
      /* page body */
      1fr;
    grid-template-rows: auto auto auto 1fr;
  }
}

@media (--x-large-down) {
  .ma-layout-detail__anchor-nav {
    ma-table-of-contents {
      --ma-table-of-contents-highlighted: 1;
    }
  }
}

@media (--x-large-and-up) {
  .ma-layout-detail__anchor-nav > * {
    inset-block-start: 0;
    position: sticky;
  }

  .ma-layout-detail__content {
    grid-template-areas:
      "side-nav  breadcrumb-nav breadcrumb-nav"
      "side-nav  header  anchor-nav"
      "side-nav  body  anchor-nav";
    grid-template-columns:
      /* side-nav */
      var(--ma-layout-side-bar-inline-size)
      /* page body */
      1fr
      /* anchor-nav */
      var(--ma-layout-side-bar-inline-size);
    grid-template-rows: auto auto 1fr;
  }
}

